<resources>
    <string name="app_name">핀메뉴 관리</string>
    <string name="kakao_appKey">ed079e485180274fc2b0ae6a18748457</string>
    <string name="kakao_apiKey">015591dc3e42af388c31ed63f3597fd3</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="signup">회원가입</string>
    <string name="drop">탈퇴</string>
    <string name="won">원</string>
    <string name="gea">개</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="total">총</string>
    <string name="delete_order">주문삭제</string>
    <string name="total_gea">총 %d개</string>
    <string name="set_tableno">테이블 이동</string>
    <string name="sel_tableno">테이블번호 선택</string>
    <string name="tableno">테이블 번호</string>
    <string name="tablepass">테이블 비밀번호</string>
    <string name="essential">필수</string>
    <string name="choice">선택</string>
    <string name="empty">없음</string>
    <string name="order">주문</string>
    <string name="call">호출</string>
    <string name="pos">포스</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="delete">삭제</string>
    <string name="update">수정</string>
    <string name="sequence">순서</string>
    <string name="setting">설정</string>
    <string name="restore">복원</string>
    <string name="dot">・</string>
    <string name="btn_login">로&#160;그&#160;인</string>
    <string name="btn_confirm">확&#160;&#160;인</string>
    <string name="btn_cancel">취&#160;&#160;소</string>
    <string name="btn_save">저&#160;&#160;장</string>
    <string name="btn_save2">저&#160;장</string>
    <string name="btn_delete">삭&#160;&#160;제</string>
    <string name="btn_delete2">삭&#160;제</string>
    <string name="btn_update">수&#160;&#160;정</string>
    <string name="btn_update2">수&#160;정</string>
    <string name="btn_sequence">순&#160;&#160;서</string>
    <string name="btn_sequence2">순&#160;서</string>
    <string name="btn_call">호&#160;&#160;출</string>
    <string name="btn_call2">호&#160;출</string>
    <string name="btn_complete">완&#160;&#160;료</string>
    <string name="btn_payment">결&#160;&#160;제</string>
    <string name="btn_payment2">결&#160;제</string>
    <string name="btn_choice">선&#160;&#160;택</string>
    <string name="btn_link">연&#160;&#160;동</string>
    <string name="btn_clear">초&#160;기&#160;화</string>
    <string name="btn_add">추&#160;&#160;가</string>
    <string name="btn_close">닫&#160;&#160;기</string>
    <string name="btn_not_today">오늘 그만 보기</string>
    <string name="udt_info">정보변경</string>
    <string name="back">돌아가기</string>
    <string name="date">날짜</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="tilde">~</string>
    <string name="colon">:</string>
    <string name="right_angle">\></string>
    <string name="zero">0</string>
    <string name="zero2">00</string>
    <string name="min">분</string>
    <string name="zeroClock"><font color="#B4B4B4">00</font>:<font color="#B4B4B4">00</font></string>
    <string name="monday">월요일</string>
    <string name="tuesday">화요일</string>
    <string name="wednesday">수요일</string>
    <string name="thursday">목요일</string>
    <string name="friday">금요일</string>
    <string name="saturday">토요일</string>
    <string name="sunday">일요일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>
    <string name="password_hint">8자리 이상 입력해 주세요.</string>
    <string name="check_id">중복체크</string>
    <string name="unable">사용불가</string>
    <string name="able">사용가능</string>
    <string name="link">연동</string>
    <string name="link_before">연동전</string>
    <string name="link_after">연동됨</string>
    <string name="link_fail">연동불가</string>
    <string name="arpayo_id">알파요 아이디(선택)</string>
    <string name="arpayo_id_hint">알파요 ID(이메일) 입력해 주세요.</string>
    <string name="signup_info1">아이디(이메일)는\n비밀번호 찾기를 할 때 필요한 정보입니다.\n사용 가능한 이메일로 가입해 주세요.</string>
    <string name="signup_info2">알파요 앱 아이디를 연동해주시면\n자동시급계산 앱 알파요를 사용 중인 사장님들에게\n추가 보상을 드립니다.</string>
    <string name="term1">이용약관 동의(필수)</string>
    <string name="term2">개인정보 취급방침 동의(필수)</string>
    <string name="term3">마케팅 활용 동의(선택)</string>
    <string name="login_info">회원가입은 홈페이지\n또는 태블릿용 앱에서 가능합니다.</string>
    <string name="find_pwd">비밀번호 찾기</string>
    <string name="email">아이디(이메일)</string>
    <string name="email_hint">이메일을 입력해 주세요</string>
    <string name="find_pwd_info1">회원 아이디(이메일)를 입력해 주세요.\n작성하신 아이디로 새로운 비밀번호가 전송됩니다.</string>
    <string name="find_pwd_info2">가입되지 않은 아이디는 이메일이 발송되지 않습니다.</string>
    <string name="send_pwd">새로운 비밀번호 전송</string>
    <string name="use">사용중</string>
    <string name="not_use">미사용</string>
    <string name="store_addition">부가서비스&#160;:&#160;</string>
    <string name="arpayo_conn">알파요연동</string>
    <string name="arpayo_dis_conn">알파요미연동</string>
    <string name="main">메인</string>
    <string name="store_udt">정보수정</string>
    <string name="store_pay_info">결제정보</string>
    <string name="store_pay_date">다음결제일</string>
    <string name="store_list_info">운영중인 매장을 등록하여 이용하실 수 있습니다.\n복수의 매장을 운영중이시면 다수의 매장을 등록하실 수 있습니다.</string>
    <string name="store_name">매장명</string>
    <string name="store_name_hint">매장명을 입력해주세요.</string>
    <string name="store_name_hint2">매장명을 입력해 주세요. (선택)</string>
    <string name="store_addr">매장주소</string>
    <string name="store_addr_hint">지도검색 버튼을 눌러서 입력</string>
    <string name="store_map">지도\n검색</string>
    <string name="map_hint">주소를 입력하세요.</string>
    <string name="store_addr_info1">매장 주소를 토대로 주변 고객분들께 이벤트가 진행됩니다. 매장 주소를 정확하게 입력해 주세요.</string>
    <string name="store_addr_info2">핀메뉴 관리자 앱을 사용하시기 위해서는 1개의\n매장을 필수로 등록 하셔야 이용이 가능합니다.</string>
    <string name="store_addr_info3">매장정보 수정은 태블릿PC 또는 홈페이지에서\n가능합니다</string>
    <string name="store_reg">매장등록</string>
    <string name="store_detail">세부정보</string>
    <string name="store_tel">매장 전화번호</string>
    <string name="store_sns">SNS 계정 정보</string>
    <string name="store_pd">배달/주차 정보</string>
    <string name="store_tel_hint">예) 1688-2315</string>
    <string name="store_insta">인스타그램 계정</string>
    <string name="at"><![CDATA[@]]></string>
    <string name="store_insta_hint">계정을 입력해주세요</string>
    <string name="store_delivery">배달 가능 여부</string>
    <string name="store_delivery_y">배달 가능</string>
    <string name="store_delivery_n">배달 없음</string>
    <string name="store_parking">주차 가능 여부</string>
    <string name="store_parking_y">주차 가능</string>
    <string name="store_parking_n">주차장 없음</string>
    <string name="store_parking_addr">주차장 주소</string>
    <string name="store_open_hours">영업시간</string>
    <string name="store_day_of_week">요일별</string>
    <string name="store_break">브레이크타임</string>
    <string name="store_holiday">휴일</string>
    <string name="store_same_hour">매일 동일한 영업시간</string>
    <string name="store_diff_hour">매일 다른 영업시간</string>
    <string name="store_same_break">매일 동일한 브레이크 타임</string>
    <string name="store_diff_break">매일 다른 브레이크 타임</string>
    <string name="store_same_holiday">매주 동일한 휴일</string>
    <string name="store_special_holiday">특별 휴일 입력</string>
    <string name="everyday">매일</string>
    <string name="everymonth">매월</string>
    <string name="store_time_info">새벽 6시 마감은 30:00으로 설정</string>
    <string name="store_time_set">영업시간 설정</string>
    <string name="store_break_set">브레이크타임 설정</string>
    <string name="store_holiday_set">휴일 설정</string>
    <string name="store_holiday_name">휴일 명칭</string>
    <string name="store_holiday_name_hint">명칭을 입력해주세요.</string>
    <string name="store_holiday_set_info">‘월’을 입력하지 않으면 ‘매월’로 표시합니다.</string>
    <string name="order_mgmt">주문정보</string>
    <string name="call_mgmt">직원 호출</string>
    <string name="menu_mgmt">메뉴판 설정</string>
    <string name="event_mgmt">이벤트 관리</string>
    <string name="find_menu">메뉴판 찾기</string>
    <string name="order_info_sub">주문 내역 확인</string>
    <string name="call_mgmt_sub">호출 내역 확인</string>
    <string name="menu_mgmt_sub">메뉴 정보 입력</string>
    <string name="menu_mgmt_sub2">메뉴판 색상 설정</string>
    <string name="event_mgmt_sub">재방문 이벤트 관리</string>
    <string name="menu_manage">메뉴관리</string>
    <string name="menu_reg">메뉴등록</string>
    <string name="menu_udt">메뉴수정</string>
    <string name="menu_seq">메뉴순서 변경</string>
    <string name="menu_seq_change_way">변경방법 : 변경할 메뉴를 눌러 상하로 드래그</string>
    <string name="menu_name_hint">상품명을 입력해 주세요.</string>
    <string name="menu_exp_hint">상품 설명을 입력해주세요.\n외국어 설명이 필요한 경우 줄을 바꿔 입력하여 사용할 수 있습니다.</string>
    <string name="cookingTime">조리시간</string>
    <string name="price">가격</string>
    <string name="menu_img_reg_info2">이미지 권장 규격 800×600(비율 4:3) / 최대 5MB</string>
    <string name="menu_vid_reg">동영상 /\n사진 등록</string>
    <string name="menu_vid_reg_hint">동영상 / 이미지 없음</string>
    <string name="menu_img_reg">사진 등록</string>
    <string name="menu_img_reg_hint">이미지 없음</string>
    <string name="menu_sleep">슬립 모드 때 상품 노출</string>
    <string name="menu_status">메뉴 상태 사용</string>
    <string name="option">옵션</string>
    <string name="option_require">필수옵션</string>
    <string name="option_choice">선택옵션</string>
    <string name="opt_list">입력된 옵션</string>
    <string name="opt_list_empty">입력된 옵션 없음</string>
    <string name="opt_num">옵션 %d</string>
    <string name="opt_udt_req">필수옵션 변경</string>
    <string name="opt_udt_chc">선택옵션 변경</string>
    <string name="opt_req_name">필수옵션명(고객이 하나만 선택가능)</string>
    <string name="opt_chc_name">선택옵션명(고객이 다중 선택가능)</string>
    <string name="opt_hint">옵션명을 입력해 주세요.</string>
    <string name="dialog_delete_title">%s삭제</string>
    <string name="dialog_delete_name">[ %s ]</string>
    <string name="dialog_delete_confirm">%s를 삭제하시겠습니까?</string>
    <string name="category_delete_info">삭제를 누르면 해당 카테고리에 속한 모든 메뉴가 삭제되며, 삭제 이후에는 복원하실 수 없습니다.</string>
    <string name="menu_delete_info">삭제를 누르면 입력한 모든 정보가 삭제되며,\n삭제 이후에는 복원하실 수 없습니다.</string>
    <string name="category_info_seq"><b>카테고리 순서 변경</b>은\n변경하고자하는 카테고리를 누른 후 좌우 버튼을 눌러 순서를 변경합니다.\n변경 후에는 [ 저장 ] 버튼을 눌러주셔야 변경된 내용이 적용됩니다.</string>
    <string name="category_info_udt"><b>카테고리 [ 수정 ] [ 삭제 ] [ 숨기기 ]를 할 경우</b>에는\n변경하고자하는 카테고리를 누른 후 변경 팝업창이 나오면 텍스트 수정, 삭제, 카테고리 숨김을 진행하실 수 있습니다.</string>
    <string name="category_name">카테고리 명칭</string>
    <string name="category_name_hint">명칭을 입력해 주세요.</string>
    <string name="category_exp">카테고리 설명</string>
    <string name="category_exp_hint">설명 혹은 영문을 입력해 주세요.</string>
    <string name="payment">결제</string>
    <string name="printer">프린터</string>
    <string name="qrcode">QR코드</string>
    <string name="qr_setting">QR코드 설정</string>
    <string name="qr_usable_cnt">추가 가능한 QR코드 수&#160;:&#160;</string>
    <string name="qr_store_name">Store Name</string>
    <string name="only_eng">Only English</string>
    <string name="qr_file_name_info">QR코드 저장시 파일명에 사용</string>
    <string name="qr_down_all">전체 QR코드 사진첩에 저장하기</string>
    <string name="qr_down_one">QR코드 사진첩에 저장하기</string>
    <string name="qr_post_pay_all">QR코드 전체 후불결제 적용</string>
    <string name="table_no">Table No.</string>
    <string name="table_no_hint">테이블 번호 입력</string>
    <string name="qr_detail_info1">생성된 QR코드는 변경할 수 없고, 삭제만 가능합니다.</string>
    <string name="qr_detail_info2">삭제된 QR코드는 다시 사용할 수 없습니다.</string>
    <string name="qr_detail_info3">입력된 테이블번호는 이 페이지에서 수정 가능합니다.</string>
    <string name="qr_detail_info4">테이블번호가 중복되지 않도록 관리해주세요.</string>
    <string name="qr_detail_info5">테이블번호를 영문과 숫자로 작성할 경우 QR코드 저장시 파일명으로 적용됩니다.\n단, 한글은 저장 파일명에 적용되지 않습니다.</string>
    <string name="event_popup">주문완료 후 이벤트 안내</string>
    <string name="more">더보기</string>
    <string name="order_dialog_clear">주문정보는 3일간 보관되며,\n\'초기화\'버튼을 누르면 모든 주문정보가\n삭제됩니다.</string>
    <string name="title_signup">핀메뉴 회원가입</string>
</resources>