<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/icMain"
        android:title="@string/main"
        android:icon="@drawable/ic_main_tabar_main_n_white"
        app:showAsAction="always"/>

    <item android:id="@+id/icPay"
        android:title="@string/payment"
        android:icon="@drawable/selector_navi_pay"
        app:showAsAction="always"/>

    <item android:id="@+id/icQr"
        android:title="@string/qrcode"
        android:icon="@drawable/selector_navi_qr"
        app:showAsAction="always"/>

    <item android:id="@+id/icPrinter"
        android:title="@string/printer"
        android:icon="@drawable/selector_navi_print"
        app:showAsAction="always"/>

    <item android:id="@+id/icMore"
        android:title="@string/more"
        android:icon="@drawable/selector_navi_more"
        app:showAsAction="ifRoom"/>

</menu>