<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/title"
        android:id="@+id/title"
        android:text="@string/title_signup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_back_black" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            style="@style/text15"
            android:id="@+id/tv_email"
            android:text="@string/email"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            style="@style/text15"
            android:id="@+id/check_result"
            android:visibility="visible"
            android:layout_marginBottom="9dp"
            app:layout_constraintStart_toStartOf="@+id/btn_check_id"
            app:layout_constraintEnd_toEndOf="@+id/btn_check_id"
            app:layout_constraintBottom_toTopOf="@+id/btn_check_id"/>

        <EditText
            style="@style/edittext"
            android:id="@+id/et_id"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_check_id" />

        <TextView
            style="@style/btn"
            android:id="@+id/btn_check_id"
            android:layout_width="83dp"
            android:layout_marginStart="10dp"
            android:text="@string/check_id"
            android:textSize="17sp"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="@+id/et_id"
            app:layout_constraintBottom_toBottomOf="@+id/et_id"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            style="@style/text15"
            android:id="@+id/tv_pw"
            android:text="@string/password"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/et_id"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            style="@style/edittext"
            android:id="@+id/et_pwd"
            android:layout_marginTop="10dp"
            android:hint="@string/password_hint"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pw"/>

        <TextView
            style="@style/text15"
            android:id="@+id/tv_arpayo"
            android:layout_marginTop="20dp"
            android:text="@string/arpayo_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_pwd"/>

        <TextView
            style="@style/text15"
            android:id="@+id/link_result"
            android:layout_marginBottom="9dp"
            app:layout_constraintStart_toStartOf="@+id/btn_arpayo"
            app:layout_constraintEnd_toEndOf="@+id/btn_arpayo"
            app:layout_constraintBottom_toTopOf="@+id/btn_arpayo"/>

        <EditText
            style="@style/edittext"
            android:id="@+id/et_arpayo"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password_hint"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_arpayo"
            app:layout_constraintTop_toBottomOf="@+id/tv_arpayo"/>

        <TextView
            style="@style/btn"
            android:id="@+id/btn_arpayo"
            android:layout_width="83dp"
            android:layout_marginStart="10dp"
            android:text="@string/link"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_arpayo"
            app:layout_constraintBottom_toBottomOf="@+id/et_arpayo"
            app:layout_constraintStart_toEndOf="@+id/et_arpayo" />

        <TextView
            style="@style/subtext"
            android:text="@string/signup_info1"
            android:id="@+id/info1"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="@+id/et_arpayo"
            app:layout_constraintTop_toBottomOf="@+id/et_arpayo"/>

        <TextView
            style="@style/subtext"
            android:text="@string/signup_info2"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/info1"
            app:layout_constraintTop_toBottomOf="@+id/info1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        style="@style/btn"
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>