<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".qr.QrDetailActivity"
    tools:ignore="MissingDefaultResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title"
        style="@style/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvSeq"
            style="@style/text22"
            android:textColor="#FF6200"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvQr"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvQr"
            style="@style/text22"
            android:layout_marginStart="5dp"
            android:text="@string/qrcode"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvSeq" />

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_back_white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llQr"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/img_qr_bg"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">
        <ImageView
            android:id="@+id/ivQr"
            android:layout_width="192dp"
            android:layout_height="192dp"/>
    </LinearLayout>

    <TextView
        style="@style/subtext"
        android:id="@+id/tv1"
        android:text="@string/table_no"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="@+id/llQr"
        app:layout_constraintEnd_toStartOf="@+id/etTableNo"
        app:layout_constraintTop_toTopOf="@+id/etTableNo"
        app:layout_constraintBottom_toBottomOf="@+id/etTableNo"/>

    <EditText
        style="@style/edittext"
        android:id="@+id/etTableNo"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/table_no_hint"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv1"
        app:layout_constraintEnd_toEndOf="@+id/llQr"
        app:layout_constraintTop_toBottomOf="@+id/llQr"/>

    <TextView
        style="@style/btn"
        android:id="@+id/download"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/qr_down_one"
        app:layout_constraintTop_toBottomOf="@+id/etTableNo"/>

    <TextView
        style="@style/subtext"
        android:id="@+id/dot1"
        android:text="@string/dot"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/download"
        app:layout_constraintTop_toBottomOf="@+id/download"/>

    <TextView
        style="@style/subtext"
        android:id="@+id/dot2"
        android:text="@string/dot"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/dot1"
        app:layout_constraintTop_toBottomOf="@+id/dot1"/>

    <TextView
        style="@style/subtext"
        android:id="@+id/dot3"
        android:text="@string/dot"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/dot2"
        app:layout_constraintTop_toBottomOf="@+id/dot2"/>

    <TextView
        style="@style/subtext"
        android:id="@+id/dot4"
        android:text="@string/dot"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/dot3"
        app:layout_constraintTop_toBottomOf="@+id/dot3"/>

    <TextView
        style="@style/subtext"
        android:id="@+id/dot5"
        android:text="@string/dot"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/dot4"
        app:layout_constraintTop_toBottomOf="@+id/dot4"/>

    <TextView
        style="@style/subtext"
        android:text="@string/qr_detail_info1"
        app:layout_constraintStart_toEndOf="@+id/dot1"
        app:layout_constraintTop_toTopOf="@+id/dot1"/>

    <TextView
        style="@style/subtext"
        android:text="@string/qr_detail_info2"
        app:layout_constraintStart_toEndOf="@+id/dot2"
        app:layout_constraintTop_toTopOf="@+id/dot2"/>

    <TextView
        style="@style/subtext"
        android:text="@string/qr_detail_info3"
        app:layout_constraintStart_toEndOf="@+id/dot3"
        app:layout_constraintTop_toTopOf="@+id/dot3"/>

    <TextView
        style="@style/subtext"
        android:text="@string/qr_detail_info4"
        app:layout_constraintStart_toEndOf="@+id/dot4"
        app:layout_constraintTop_toTopOf="@+id/dot4"/>

    <TextView
        style="@style/subtext"
        android:text="@string/qr_detail_info5"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@+id/dot5"
        app:layout_constraintEnd_toEndOf="@+id/download"
        app:layout_constraintTop_toTopOf="@+id/dot5"/>

    <TextView
        style="@style/btn_cancel"
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_delete2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        style="@style/btn"
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn_save"
        app:layout_constraintWidth_percent="0.66"
        app:layout_constraintStart_toEndOf="@+id/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/delete" />

</androidx.constraintlayout.widget.ConstraintLayout>