<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_r6w">

        <TextView
            style="@style/text17"
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_marginVertical="40dp"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/order_dialog_clear"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            style="@style/btn_dialog_cancel"
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_marginTop="40dp"
            android:text="@string/btn_clear"
            app:layout_constraintTop_toBottomOf="@+id/content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/confirm"/>

        <TextView
            style="@style/btn_dialog_right"
            android:id="@+id/confirm"
            android:text="@string/btn_confirm"
            android:layout_width="0dp"
            app:layout_constraintTop_toTopOf="@+id/clear"
            app:layout_constraintBottom_toBottomOf="@+id/clear"
            app:layout_constraintStart_toEndOf="@+id/clear"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>